@@ -1,3 +1,6 @@
+20 August 2009: Wouter
+	- autotrust: save and read trustpoint variables.
+
 19 August 2009: Wouter
 	- autotrust: state table updates.
 	- iana portlist updated.
